[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.189", features = ["rc"] }
serde_derive = "1.0.189"
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json"] }
chrono = { version = "0.4.31", features = ["serde"] }
base64 = "0.21.4"
shuttle-runtime = "0.34.0"
shuttle-axum = "0.34.0"
shuttle-secrets = "0.34.0"
shuttle-shared-db = { version = "0.34.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "chrono", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
futures = "0.3.28"
toy-json-formatter = "0.1.9"
html-to-string-macro = "0.2.5"

[env]
OPENSSL_DIR = "/usr/include/"
